--- a/diag/admin/views/security.html
+++ b/diag/admin/views/security.html
@@ -1,3 +1,6 @@
-<h1>Security Telemetry</h1>
-<div id="securityTelemetryContainer"></div>
-<script src="js/securityView.js"></script>
+<h1>Security</h1>
+<div class="coming-soon">
+  <i class="ti ti-shield-check" style="font-size:48px;color:#888;"></i>
+  <h2>Coming Soon</h2>
+  <p>The Security Deep Dive will be available in a future release.<br>Stay tuned for advanced threat analytics and compliance insights!</p>
+</div>
