Fixed timeline toggle, and perf view along with other minor tweaks

--- a/diag/admin/css/admin.css
+++ b/diag/admin/css/admin.css
@@ -99,6 +99,18 @@ body {
     min-height: 180px;
 }
 
+.kpi-gauge-lg {
+    min-height: 220px;
+}
+
+.kpi-gauge-sm {
+    min-height: 100px;
+}
+
+.kpi-sparkline {
+    height: 40px; /* Fixed height for sparklines */
+}
+
 /* Logo Fix */
 .navbar-brand {
     display: flex;
